tests/ui/cilk/cilk_spawn_continue_error.stderr
error: cannot use `continue` within cilk_spawn
  --> $DIR/cilk_spawn_continue_error.rs:10:13
   |
LL |             continue;
   |             ^^^^^^^^

error: aborting due to 1 previous error

